--- a/voyease/templates/base.html
+++ b/voyease/templates/base.html
@@ -168,16 +168,16 @@
         <div class="footer-middle">
             <div class="middle-left">
                 <h3>Company</h3><br>
-                <p>Home</p>
-                <p>About Us</p>
-                <p>Contact Us</p>
+                <a href="/#homepage"><p>Home</p></a>
+                <a href="/#about_us_page"><p>About Us</p></a>
+                <a href="/#contact_us"><p>Contact Us</p></a>
                 <a href="/privacy_policy"><p>Privacy policy</p></a>
             </div>
             <div class="middle-right">
                 <h3>Links</h3><br>
                 <a href="/customer_tnc"><p>Customer terms and conditions</p></a>
                 <a href="/guide_and_buddy_tnc"><p>Tour guides Terms and Conditions</p></a>
-                <a href="/guide_and_buddy_tnc"><p>Tour buddies Terms and Conditions</p></a>
+                <a href="/buddy_and_guide_tnc"><p>Tour buddies Terms and Conditions</p></a>
             </div>
         </div>
         <div class="footer-right">
