--- a/voyease/templates/index.html
+++ b/voyease/templates/index.html
@@ -80,9 +80,9 @@
                   <div class="img-wrapper"><img src="{{ url_for('static', filename='img/website-used-images/card-2.png') }}"
                     class="card-img-top" alt="Image 1"> </div>
                     <div class="card-body">
-                      <h3 class="card-title">Explore with Tour Buddies</h3>
-                      <p class="card-text">Your Friends in Every Destination</p>
-                      <p>At Tour Buddies, we don’t just guide you — we journey with you, like a trusted friend. Our goal is to make your travel experience personal, fun, and unforgettable. Whether you’re uncovering hidden gems or navigating popular spots, we’re by your side, sharing stories, local insight and the best tips for an authentic adventure. With Tour buddies, you're never just a tourist - you're a friend exploring the world together. </p>
+                      <h3 class="card-title"></h3>
+                      <p class="card-text"></p>
+                      <p></p>
                   </div>
               </div>
           </div>
@@ -355,23 +355,7 @@
         </div>
       </div>
     </div>
-    <div class="contact-details">
-      <div class="address">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
-        <p>Address: </p>
-        <p>CK 13/94, Bajrang Katra, Chowk, Varanasi, 221001</p>
-      </div>
-      <div class="phone">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
-        <p>Phone: </p>
-        <p>+91-9125831516</p>
-      </div>
-      <div class="email">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
-        <p>Email: </p>
-        <p>support@voyease.in</p>
-      </div>
-    </div>
+    
   </div>
   
 </div>
